# 2024G-RT-main

./: README.md
Games101/: Cargo.toml
Games101/src/: rasterizer1.rs  rasterizer2.rs  rasterizer3.rs  task1.rs  task2.rs  task3.rs  texture.rs  utils.rs
RayTracer/: Cargo.toml
RayTracer/src/: aabb.rs  bvh.rs  camera.rs  color.rs  hittables.rs  intervals.rs  main.rs  materials.rs  perlins.rs  quads.rs  ray.rs  sphere.rs  textures.rs  util.rs  vec3.rs
Report/lab2/: 25采样 渲染时间.txt  4采样 渲染时间.txt  9采样 渲染时间.txt
