[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
image = "0.24.2"
indicatif = "0.16.2" # progress bar
opencv = "0.92.0"
rand="0.8.5"
sphere = "0.3.0"
world = "0.1.8"
